Release 0.2.0 ()

- Switched to new PCIe driver

Release 0.1.0 ()

- Rename LimeSuite to LimeSuiteNG
- Rename libLimeSuite to liblimesuiteng
- Switch to semantic versioning for liblimesuiteng